# mysticGroove

./: .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp  main.qml
.github/workflows/: build.yml
component/: AuroraBackground.qml  AuroraParticles.qml  AuroraShader.qml  GlassCard.qml  HomeView.qml  LibraryView.qml  MiniPlayer.qml  NowPlayingView.qml  PlayerControls.qml  PlayerIcon.qml  PlayerIconButton.qml  PlaylistView.qml  QueueItem.qml  SearchView.qml  TabBar.qml
component/background/: AuroraBackground.qml
component/glass/: GlassButton.qml
component/nav/: TabBar.qml
component/player/: AlbumArtDisplay.qml  PlayerIconButton.qml  SeekBar.qml
component/views/: HomeView.qml  LibraryView.qml  NowPlayingView.qml  PlaylistView.qml  SearchView.qml
shaders/: aurora.frag
